// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorFilter components renders properly 1`] = `
<Connect(CheckboxMenu)
  buttonType="columnFilter"
  menuType="Monitoring"
  selectionType="select"
  updateFilter={[Function]}
>
  Monitoring
</Connect(CheckboxMenu)>
`;

exports[`monitoringColumn Cell renders 1 person is activly monitoring the call 1`] = `
<div>
  <React.Fragment>
    <styled.div />
    <styled.div>
      1
    </styled.div>
    <Styled(Button)
      className="monitorCall"
      disabled={true}
      id="monitorCallButton"
      onClick={[Function]}
      type="secondary"
    >
      Monitor
    </Styled(Button)>
  </React.Fragment>
</div>
`;

exports[`monitoringColumn Cell renders 1 person previously monitored the call 1`] = `
<div>
  <React.Fragment>
    <styled.div>
      1
    </styled.div>
    <styled.div />
    <Styled(Button)
      className="monitorCall"
      disabled={true}
      id="monitorCallButton"
      onClick={[Function]}
      type="secondary"
    >
      Monitor
    </Styled(Button)>
  </React.Fragment>
</div>
`;

exports[`monitoringColumn Cell renders does not render in non-voice channels 1`] = `<div />`;

exports[`monitoringColumn Cell renders monitor button is disabled when monitoring id matches the rows id 1`] = `
<div>
  <React.Fragment>
    <styled.div>
      1
    </styled.div>
    <styled.div />
    <Styled(Button)
      className="monitorCall"
      disabled={true}
      id="monitorCallButton"
      onClick={[Function]}
      type="secondary"
    >
      Monitor
    </Styled(Button)>
  </React.Fragment>
</div>
`;

exports[`monitoringColumn Cell renders monitor button is disabled when monitoring status is connecting 1`] = `
<div>
  <React.Fragment>
    <styled.div>
      1
    </styled.div>
    <styled.div />
    <Styled(Button)
      className="monitorCall"
      disabled={true}
      id="monitorCallButton"
      onClick={[Function]}
      type="secondary"
    >
      Monitor
    </Styled(Button)>
  </React.Fragment>
</div>
`;

exports[`monitoringColumn configuration object configurations show method returns false when value is false 1`] = `
Object {
  "Cell": [Function],
  "Filter": [Function],
  "Header": "Monitoring",
  "accessor": [Function],
  "filterMethod": [Function],
  "id": "monitoring",
  "show": false,
  "width": 180,
}
`;

exports[`monitoringColumn configuration object configurations show method returns true when value is true 1`] = `
Object {
  "Cell": [Function],
  "Filter": [Function],
  "Header": "Monitoring",
  "accessor": [Function],
  "filterMethod": [Function],
  "id": "monitoring",
  "show": true,
  "width": 180,
}
`;
